[package]
name = "rusti"
version = "0.1.3"
authors = ["Dowland Aiello <mitsukomegumii@gmail.com>"]
edition = "2018"
description = "A simple go-style utility for downloading, installing, and running rust programs."
license = "MIT"
homepage = "https://github.com/dowlandaiello/rusti"
repository = "https://github.com/dowlandaiello/rusti"
readme = "README.md"

[dependencies]
dirs = "1.0"